[workspace]
resolver = "2"
members = [
  ".",
  "members/libpt-core",
  "members/libpt-math",
  "members/libpt-log",
  "members/libpt-net",
]
default-members = [".", "members/libpt-core"]
[workspace.package]
publish = true
version = "0.3.10"
edition = "2021"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "Personal multitool"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/pt"
repository = "https://git.cscherr.de/PlexSheep/pt"
keywords = ["cli", "library"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::ffi",
]

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
libpt-core = { version = "0.3.10", path = "members/libpt-core" }
libpt-bintols = { version = "0.3.10", path = "members/libpt-bintols" }
libpt-log = { version = "0.3.10", path = "members/libpt-log" }
libpt-math = { version = "0.3.10", path = "members/libpt-math" }
libpt-net = { version = "0.3.10", path = "members/libpt-net" }

[package]
name = "libpt"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["log", "core", "bin"]
core = []
math = []
log = []
bintols = []
net = []
bin = ["dep:clap", "dep:clap-num", "dep:clap-verbosity-flag", "math", "bintols"]

[lib]
name = "libpt"
crate-type = [
  "dylib",     # .dll, .so, .dynlib
  "staticlib", # .lib, .a
  "rlib",
]

[[bin]]
name = "ccc"
path = "src/ccc/mod.rs"
required-features = ["bin", "math"]

[[bin]]
name = "hedu"
path = "src/hedu/mod.rs"
required-features = ["bin", "bintols"]


[dependencies]
libpt-core = { workspace = true }
libpt-bintols = { workspace = true }
libpt-log = { workspace = true }
libpt-math = { workspace = true }
libpt-net = { workspace = true }
clap = { version = "4.4.4", features = ["derive"], optional = true }
clap-num = { version = "1.0.2", optional = true }
clap-verbosity-flag = { version = "2.0.1", optional = true }
