[workspace]
resolver = "2"
members = [".", "members/libpt-core", "members/libpt-log", "members/libpt-cli"]
default-members = [".", "members/libpt-core"]

[workspace.package]
publish = true
version = "0.7.3-alpha.2"
edition = "2021"
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Personal multitool"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/pt"
repository = "https://git.cscherr.de/PlexSheep/pt"
keywords = ["library"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
libpt-core = { version = "0.5.0", path = "members/libpt-core" }
libpt-bintols = { version = "0.5.1", path = "members/libpt-bintols" }
libpt-log = { version = "0.6.2-alpha.1", path = "members/libpt-log" }
libpt-cli = { version = "0.2.2-alpha.1", path = "members/libpt-cli" }

[package]
name = "libpt"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["log", "core"]
core = []
full = ["default", "core", "log", "bintols", "libpt-cli/full"]
log = ["dep:libpt-log"]
log-crate = ["libpt-cli/log"]
bintols = ["dep:libpt-bintols", "log"]
cli = ["dep:libpt-cli", "core", "log"]

[lib]
name = "libpt"
crate-type = [
  "dylib",     # .dll, .so, .dynlib
  "staticlib", # .lib, .a
  "rlib",
]

[dependencies]
libpt-core = { workspace = true }
libpt-bintols = { workspace = true, optional = true }
libpt-log = { workspace = true, optional = true }
libpt-cli = { workspace = true, optional = true, features = ["log"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
