[package]
autobins = true
name = "libpt-bin"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ccc"
path = "src/ccc/mod.rs"

[[bin]]
name = "hedu"
path = "src/hedu/mod.rs"

[[bin]]
name = "libpt"
path = "src/main/mod.rs"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
clap-num = "1.0.2"
clap-verbosity-flag = "2.0.1"
libpt = { version = "0.2.9", path = "../..", features = [
  "default",
  "ccc",
  "math",
  "hedu",
  "net",
  "log",
] }
