[package]
name = "libpt-ccc"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-traits = "0.2.16"
libpt-core = { version = "0.1.7", path = "../libpt-core" }
libpt-log = { version = "0.1.7", path = "../libpt-log" }
libpt-math = { version = "0.1.7", path = "../libpt-math" }
