[package]
name = "libpt-cli"
publish.workspace = true
version = "0.2.2-alpha.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = ["log"]
log = ["dep:log"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.7", features = ["derive"] }
comfy-table = "7.1.1"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
embed-doc-image = "0.1.4"
indicatif = "0.17.8"
libpt-log = { workspace = true, optional = false }
log = { version = "0.4.21", optional = true }
serde = { version = "1.0.209", features = ["derive"] }
shlex = "1.3.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
