[package]
name = "libpt-core"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0.79"
cucumber = "0.20.2"
libpt-log = { version = "0.2.6-alpha.0", path = "../libpt-log" }
