[package]
name = "libpt-hedu"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
libpt-log = { version = "0.2.7-alpha.0", path = "../libpt-log" }
libpt-bintols = { version = "0.2.7-alpha.0", path = "../libpt-bintols" }
