[package]
name = "libpt-log"
publish.workspace = true
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
anyhow = { workspace = true }
thiserror = { workspace = true }
libpt-core = { workspace = true, optional = false }

[dev-dependencies]
gag = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
