[package]
name = "libpt-log"
publish.workspace = true
version = "0.6.2-alpha.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
libpt-core = { workspace = true, optional = false }
chrono = "0.4.38"

[dev-dependencies]
gag = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
