[package]
name = "libpt-net"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
libpt-core = { version = "0.2.6-alpha.0", path = "../libpt-core" }
libpt-log = { version = "0.2.6-alpha.0", path = "../libpt-log" }
libpt-math = { version = "0.2.6-alpha.0", path = "../libpt-math" }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
