[package]
name = "libpt-py"
version.workspace = true
edition.workspace = true

[package.metadata.maturin]
name = "libpt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libpt = { version = "0.3.11", path = "../.." }
pyo3 = "0.19.0"

[features]
default = ["log", "core", "full"]
core = []
full = ["default", "core", "math", "log", "bintols", "net"]
math = ["libpt/math", "log"]
log = ["libpt/log"]
bintols = ["libpt/bintols", "log"]
net = ["libpt/net", "log"]
