[package]
name = "pt-py"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_libpt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
libpt = { version = "0.1.7", path = "../../" }
